kmom06/kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "microblog-ingress"
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - microblog.martinborg.xyz # CHANGE ME!
    secretName: microblog-tls
  rules:
  - host: microblog.martinborg.xyz # CHANGE ME!
    http:
      paths:
      - path: /
        backend:
          serviceName: microblog
          servicePort: 5000
